# pristine-celery-demo

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  pytest.ini
celery_demo/: __init__.py  apps.py  tasks.py
documents/: dev_tools.md
documents/hr_app/: README.md  api_endpoints.md  models.md  setup.md  signals.md
hr/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
hr/tests/: test_admin.py  test_views.py
pristine/: __init__.py  asgi.py  celery.py  manage.py  settings.py  urls.py  wsgi.py
